--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ avatar: https://github.com/SD-Suman/SD-Suman.github.io/blob/master/images/Portfo
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: suman.nad@gmail.com
   facebook:
   flickr:
-  github: https://github.com/SD-Suman
+  github: SD-Suman
   instagram:
-  linkedin: https://www.linkedin.com/in/s-d-suman-37702076/
+  linkedin: s-d-suman-37702076/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: https://twitter.com/theonlysumanity
+  twitter: theonlysumanity
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
