--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ avatar: https://raw.githubusercontent.com/SD-Suman/SD-Suman.github.io/master/ima
 footer-links:
   dribbble:
   email: suman.nad@gmail.com
+  googlescholar: citations?user=iVqqqVkAAAAJ&hl=en&oi=ao
   facebook:
   flickr:
   github: SD-Suman
