--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://raw.githubusercontent.com/SD-Suman/SD-Suman.github.io/master/ima
 footer-links:
   dribbble:
   email: suman.nad@gmail.com
-  google-scholar: citations?user=iVqqqVkAAAAJ&hl=en&oi=ao
+  googlescholar: https://scholar.google.com/citations?user=iVqqqVkAAAAJ&hl=en
   facebook:
   flickr:
   github: SD-Suman
