--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,12 @@ baseurl: ""
 
 permalink: /:title/
 
+# Set collection
+collections:
+  - portfolio
+
+
+
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
